// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Object Identifier Bold 1`] = `
<div
  class="fd-object-identifier"
>
  
    
  <p
    class="fd-object-identifier__title fd-object-identifier__title--bold"
  >
    NoteBook Basic 15
  </p>
  

</div>
`;

exports[`Storyshots Components/Object Identifier Descriptive 1`] = `
<section>
  <div
    class="fd-object-identifier"
  >
    
    
    <p
      class="fd-object-identifier__title"
    >
      NoteBook Basic 15
    </p>
    
    
    <p
      class="fd-object-identifier__text"
    >
      Notebook Basic 15 with 2,80 GHz quad core, 15" LCD, 4 GB DDR3 RAM, 500 GB Hard Disc, Windows 8 Pro
    </p>
    

  </div>
  


  <br />
  


  <div
    class="fd-object-identifier"
  >
    
    
    <p
      class="fd-object-identifier__title fd-object-identifier__title--bold"
    >
      NoteBook Basic 15
    </p>
    
    
    <p
      class="fd-object-identifier__text"
    >
      Notebook Basic 15 with 2,80 GHz quad core, 15" LCD, 4 GB DDR3 RAM, 500 GB Hard Disc, Windows 8 Pro
    </p>
    

  </div>
  


  <br />
  


  <div
    class="fd-object-identifier"
  >
    
    
    <p
      class="fd-object-identifier__title fd-object-identifier__title--link"
    >
      NoteBook Basic 15
    </p>
    
    
    <p
      class="fd-object-identifier__text"
    >
      Notebook Basic 15 with 2,80 GHz quad core, 15" LCD, 4 GB DDR3 RAM, 500 GB Hard Disc, Windows 8 Pro
    </p>
    

  </div>
  


  <br />
  


  <div
    class="fd-object-identifier"
  >
    
    
    <p
      class="fd-object-identifier__title fd-object-identifier__title--bold fd-object-identifier__title--link"
    >
      NoteBook Basic 15
    </p>
    
    
    <p
      class="fd-object-identifier__text"
    >
      Notebook Basic 15 with 2,80 GHz quad core, 15" LCD, 4 GB DDR3 RAM, 500 GB Hard Disc, Windows 8 Pro
    </p>
    

  </div>
  

</section>
`;

exports[`Storyshots Components/Object Identifier Link 1`] = `
<section>
  <div
    class="fd-object-identifier"
  >
    
    
    <p
      class="fd-object-identifier__title fd-object-identifier__title--link"
    >
      NoteBook Basic 15
    </p>
    

  </div>
  

  <br />
  

  <div
    class="fd-object-identifier"
  >
    
    
    <p
      class="fd-object-identifier__title fd-object-identifier__title--bold fd-object-identifier__title--link"
    >
      NoteBook Basic 15
    </p>
    

  </div>
  

  <br />
  

  <div
    class="fd-object-identifier"
  >
    
    
    <p
      class="fd-object-identifier__title"
    >
      <a
        class="fd-link fd-object-identifier__link"
        href="#"
      >
        NoteBook Basic 15
      </a>
    </p>
    

  </div>
  

  <br />
  

  <div
    class="fd-object-identifier"
  >
    
    
    <p
      class="fd-object-identifier__title fd-object-identifier__title--bold"
    >
      <a
        class="fd-link fd-object-identifier__link"
        href="#"
      >
        NoteBook Basic 15
      </a>
    </p>
    

  </div>
  

</section>
`;

exports[`Storyshots Components/Object Identifier Table 1`] = `
<table
  class="fd-table fd-object-identifier__table"
>
  
    
  <thead
    class="fd-table__header"
  >
    
        
    <tr
      class="fd-table__row"
    >
      
            
      <th
        class="fd-table__cell"
        scope="col"
      >
        Product
      </th>
      
            
      <th
        class="fd-table__cell"
        scope="col"
      >
        Supplier
      </th>
      
            
      <th
        class="fd-table__cell"
        scope="col"
      >
        Weight
      </th>
      
            
      <th
        class="fd-table__cell"
        scope="col"
      >
        Price
      </th>
      
        
    </tr>
    
    
  </thead>
  
    
  <tbody
    class="fd-table__body"
  >
    
        
    <tr
      class="fd-table__row"
    >
      
            
      <td
        class="fd-table__cell"
      >
        
                
        <div
          class="fd-object-identifier"
        >
          
                    
          <p
            class="fd-object-identifier__title"
          >
            10" Portable DVD player
          </p>
          
                    
          <p
            class="fd-object-identifier__text"
          >
            HT-2001
          </p>
          
                
        </div>
        
            
      </td>
      
            
      <td
        class="fd-table__cell"
      >
        Titanium
      </td>
      
            
      <td
        class="fd-table__cell"
      >
        0.84 KG
      </td>
      
            
      <td
        class="fd-table__cell"
      >
        449.99 EUR
      </td>
      
        
    </tr>
    
        
    <tr
      class="fd-table__row"
    >
      
            
      <td
        class="fd-table__cell"
      >
        
                
        <div
          class="fd-object-identifier"
        >
          
                    
          <p
            class="fd-object-identifier__title fd-object-identifier__title--bold"
          >
            Astro Phone 6
          </p>
          
                    
          <p
            class="fd-object-identifier__text"
          >
            HT-1252
          </p>
          
                
        </div>
        
            
      </td>
      
            
      <td
        class="fd-table__cell"
      >
        Technocom
      </td>
      
            
      <td
        class="fd-table__cell"
      >
        1.79 KG
      </td>
      
            
      <td
        class="fd-table__cell"
      >
        349.99 EUR
      </td>
      
        
    </tr>
    
        
    <tr
      class="fd-table__row"
    >
      
            
      <td
        class="fd-table__cell"
      >
        
                
        <div
          class="fd-object-identifier"
        >
          
                    
          <p
            class="fd-object-identifier__title fd-object-identifier__title--link"
          >
            Blaster Extreme
          </p>
          
                    
          <p
            class="fd-object-identifier__text"
          >
            HT-1091
          </p>
          
                
        </div>
        
            
      </td>
      
            
      <td
        class="fd-table__cell"
      >
        Ultrasonic United
      </td>
      
            
      <td
        class="fd-table__cell"
      >
        0.79 KG
      </td>
      
            
      <td
        class="fd-table__cell"
      >
        249.99 EUR
      </td>
      
        
    </tr>
    
    
  </tbody>
  

</table>
`;

exports[`Storyshots Components/Object Identifier Title 1`] = `
<div
  class="fd-object-identifier"
>
  
    
  <p
    class="fd-object-identifier__title"
  >
    NoteBook Basic 15
  </p>
  

</div>
`;
